--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -24,6 +24,6 @@ By {{ site.author }}
 <div id="bottom_links">
     <a href="#a-title" title="Go to the top of the page">Top</a>
     <a href="{{ site.url | append: site.baseurl }}" title="Go to the main page">Home</a>
-    <a href="/feed.xml" title="The RSS feed">RSS</a>
+    <a href="{{ site.url | append: site.baseurl | append: '/feed.xml' }}" title="The RSS feed">RSS</a>
     <a href="{{ page.path | prepend: 'https://github.com/EllieTheYeen/test/blob/main/' }}" title="Source of this page">Source</a>
 </div>
